Add admin permissions catalog presets